nav and main section 1 adding

--- a/index.html
+++ b/index.html
@@ -8,12 +8,29 @@
 </head>
 <body>
     <header>
-        <h1>Hi..</h1>
-
+        <nav class="nav-title">
+            <h2 class="name">Awlad.H</h2>
+            <ul>
+                <li> <a href=""><button class="btn-primary">Download CV</button></a></li>
+            </ul>
+        </nav>
 
     </header>
 
     <main>
+        <section class="starting-section">
+            <div class="image-1">
+                <img src="assets/Group.png" alt="">
+            </div>
+            <div class="description">
+                <h1 class="heading">"In the near future, I hope to become a Developer."</h1>
+                <p class="heading-desc">"In the near future, I hope to become a Developer. I'm excited to learn new programming languages and build innovative solutions. The journey ahead promises growth and countless opportunities."</p>
+            </div>
+            <div>
+                <a href=""><button class="btn-secondary">Contact With Me</button></a></li>
+            </div>
+        </section>
+
 
 
     </main>
