--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="nav-title">
             <h2 class="name">Awlad.H</h2>
             <ul>
-                <li> <a href=""><button class="btn-primary">Download CV</button></a></li>
+                <li> <a href="https://drive.google.com/file/d/18YSMv9ECCkP7iARHBkn88NLJfxxWkLX2/view?usp=sharing"><button class="btn-primary">Download CV</button></a></li>
             </ul>
         </nav>
 
@@ -20,17 +20,61 @@
     <main>
         <section class="starting-section">
             <div class="image-1">
-                <img src="assets/Group.png" alt="">
+                <img src="assets/Group.png" alt="Loading">
             </div>
             <div class="description">
                 <h1 class="heading">"In the near future, I hope to become a Developer."</h1>
                 <p class="heading-desc">"In the near future, I hope to become a Developer. I'm excited to learn new programming languages and build innovative solutions. The journey ahead promises growth and countless opportunities."</p>
             </div>
             <div>
-                <a href=""><button class="btn-secondary">Contact With Me</button></a></li>
+                <a href="https://www.facebook.com/mdakashkhan444"><button class="btn-secondary">Contact With Me</button></a></li>
             </div>
         </section>
 
+    <section class="web-dev-section">
+        <div>
+            <h1 class="web-dev-heading">Why Web Development??</h1>
+            <p class="web-dev-description">Web development allows you to blend creativity with technical skills, crafting interactive and user-friendly websites. It's a dynamic field with high demand and constant innovation. Plus, it offers flexibility with opportunities for remote work and freelance projects.</p>
+        </div>
+    
+
+        <!--Pera  -->
+    
+        <div class="Experience">
+            <div >
+                <h1 class="Experience-heading">I will Do Coding and Change The World</h1>
+                <p class="Experience-description">I will do coding and change the world. Through innovative software and applications, I aim to solve real-world problems and improve lives. Technology has the power to bring people together and create lasting impact.</p>
+                <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
+            </div>
+            <div>
+                <img class="Experience-image" src="assets/Layer_1.png" alt="Loading">
+            </div>
+        </div>
+
+        <div class="Experience">
+            <div>
+                <img class="Experience-image" src="assets/Group 3.png" alt="Loading">
+            </div>
+            <div >
+                <h1 class="Experience-heading">I will help People by creating Modern Web System</h1>
+                <p class="Experience-description">I will help people by creating modern web systems that enhance user experience and accessibility. My goal is to develop innovative solutions that address everyday challenges and make information easily accessible. </p>
+                <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
+            </div>
+
+        </div>
+
+        <div class="Experience">
+            <div >
+                <h1 class="Experience-heading">I will do coding and change the world.</h1>
+                 <p class="Experience-description"> Through innovative software and applications, I aim to solve real-world problems and improve lives. Technology has the power to bring people together and create lasting impact.</p>
+                 <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
+            </div>
+            <div>
+                <img class="Experience-image" src="assets/Group 4.png" alt="Loading">
+            </div>
+        </div>
+
+     </section>
 
 
     </main>
