inspiration section adding

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             </div>
         </section>
 
+        <!-- Web development section -->
+
     <section class="web-dev-section">
         <div>
             <h1 class="web-dev-heading">Why Web Development??</h1>
             <p class="web-dev-description">Web development allows you to blend creativity with technical skills, crafting interactive and user-friendly websites. It's a dynamic field with high demand and constant innovation. Plus, it offers flexibility with opportunities for remote work and freelance projects.</p>
         </div>
     
-
-        <!--Pera  -->
     
         <div class="Experience">
             <div >
@@ -75,6 +75,13 @@
         </div>
 
      </section>
+
+     <!-- Inspiration section -->
+      <div class="inspiration">
+        <h1 class="Inspiration-heading">My Inspiration</h1>
+        <p class="inspiration-description">My inspiration jhankar Mahbub Vaiya.. His communication skills are amazing.His way of speaking inspire me to speak,listen and act accordingly.</p>
+        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=56URp5N9uywKXMhx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
 
 
     </main>
