--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="nav-title">
-            <h2 class="name">Awlad.H</h2>
+            <h2 class="name">Rizbi.A</h2>
             <ul>
                 <li> <a href="https://drive.google.com/file/d/18YSMv9ECCkP7iARHBkn88NLJfxxWkLX2/view?usp=sharing"><button class="btn-primary">Download CV</button></a></li>
             </ul>
@@ -83,6 +83,38 @@
         <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=56URp5N9uywKXMhx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
 
+
+      <!-- Target section -->
+
+      <section>
+        <h1 class="target-heading">My Current Target</h1>
+        <p class="target-desc">My current target is completing web development course perfectly.</p>
+
+        <div class="target-container">
+
+            <div class="target-html">
+                <img src="assets/html.png" alt="">
+                <h4 class="target-title">Html</h4>
+                <p class="target-description">HTML (HyperText Markup Language) is the standard markup language used to create the structure and content of web pages.</p>
+                <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
+            </div>
+            <div class="target-css">
+                <img src="assets/css.png" alt="">
+                <h4 class="target-title">CSS</h4>
+                <p class="target-description">CSS (Cascading Style Sheets) is a stylesheet language used to describe the presentation, layout, and styling of HTML documents.</p>
+                <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
+            </div>
+            <div class="target-js">
+                <img src="assets/js.png" alt="">
+                <h4 class="target-title">JavaScript</h4>
+                <p class="target-description">JavaScript is a versatile programming language that enables interactive and dynamic behavior on websites, allowing for enhanced user experiences.</p>
+                <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
+            </div>
+           
+
+        </div>
+      
+      </section>
 
     </main>
 
