support section adding

--- a/index.html
+++ b/index.html
@@ -113,8 +113,27 @@
            
 
         </div>
+
+               <!-- Need support section -->
+    <div class="support-st">
+        <div class="need-support">
+           <h1 class="need-support-heading">I need support</h1>
+           <p class="need-support-description">I'm here to help. If you're struggling with any aspect of web development, don't hesitate to ask. I'm always here to learn and improve.</p>
+       </div>
+
+       <div class="support-submit">
+
+       <form>
+           <label for="support">
+               <input type="text" id="support" placeholder="Suggest me any feedback for me" name="support" required>
+           </label>
+           <button type="submit" class="">Submit</button>
+       </form>
+    </div>
+
+   </div>
       
-      </section>
+ </section>
 
     </main>
 
