Assignment 1 final result

--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
 
             <div class="target-html">
                 <img src="assets/html.png" alt="">
-                <h4 class="target-title">Html</h4>
+                <h2 class="target-title">Html</h2>
                 <p class="target-description">HTML (HyperText Markup Language) is the standard markup language used to create the structure and content of web pages.</p>
                 <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
             </div>
             <div class="target-css">
                 <img src="assets/css.png" alt="">
-                <h4 class="target-title">CSS</h4>
+                <h2 class="target-title">CSS</h2>
                 <p class="target-description">CSS (Cascading Style Sheets) is a stylesheet language used to describe the presentation, layout, and styling of HTML documents.</p>
                 <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
             </div>
             <div class="target-js">
                 <img src="assets/js.png" alt="">
-                <h4 class="target-title">JavaScript</h4>
+                <h2 class="target-title">JavaScript</h2>
                 <p class="target-description">JavaScript is a versatile programming language that enables interactive and dynamic behavior on websites, allowing for enhanced user experiences.</p>
                 <a href="https://www.w3schools.com/whatis/"><button class="web-btn">Learn More</button></a>
             </div>
@@ -114,22 +114,20 @@
 
         </div>
 
-               <!-- Need support section -->
+         <!-- Need support section -->
+
     <div class="support-st">
         <div class="need-support">
-           <h1 class="need-support-heading">I need support</h1>
+           <h1 class="need-support-heading">Need support</h1>
            <p class="need-support-description">I'm here to help. If you're struggling with any aspect of web development, don't hesitate to ask. I'm always here to learn and improve.</p>
        </div>
 
-       <div class="support-submit">
-
-       <form>
+       <form class="support-submit">
            <label for="support">
-               <input type="text" id="support" placeholder="Suggest me any feedback for me" name="support" required>
+               <input type="text" id="support" placeholder="Any feedback for me" name="support" required>
            </label>
-           <button type="submit" class="">Submit</button>
+           <input type="submit" value="Submit">
        </form>
-    </div>
 
    </div>
       
@@ -138,6 +136,19 @@
     </main>
 
     <footer>
+        <srction>
+            <div class="footer-container">
+                <div>
+                    <h3>An open commitment by Rizbi Ahmmad</h3>
+                </div>
+                <div>
+                        <a href="https://www.facebook.com/mdakashkhan444"><img src="assets/facebook.png" alt=""></a>
+                        <a href="https://github.com/RizbiAhmmad/Web-dev-assignment-1-solution"><img src="assets/github.png" alt=""></a>
+                        <a href="https://www.linkedin.com/in/rizbi-ahmmad-064481304/"><img src="assets/linkedin-icon 1.png" alt=""></a>
+
+                </div>
+            </div>
+        </srction>
 
 
     </footer>
